fix bio on mobile

--- a/themes/dissent/static/css/mobile.css
+++ b/themes/dissent/static/css/mobile.css
@@ -66,7 +66,7 @@
 	height:80%;
 	padding:2vh 2vw 2vh 2vw;
 }
-.popup .bio {	position:absolute ;bottom:5px;;left:5px;right:5px;top:400px;;overflow-y: auto; }
+.popup .bio {	position:absolute ;bottom:0.5em;left: 0.5em;right:0.5em;top:9em;overflow-y: auto; }
 
 .popup img.speaker-img { width:25vw; max-height:unset; }
 .popup .featured-description { font-size:1em; }
